app/assets/stylesheets/pages/_home.scss
/* ... */
.first-section-text {
  width: 600px;
  position: relative;
  z-index: 10;
  padding: 20px;
  margin-bottom: 10vh;

  @include for-medium-devices-down {
    margin-bottom: 0px;
  }

  & h1 {
    color: #0D1B26;
    font-size: 50px;
  }

  @include for-phone-only {
    width: 100%;
    padding-left: 20px;


    & h1 {
      padding-top: 40px;
      font-size: 35px;
      width: 65%;
    }

  }
}

// END OF FIRST SECTION

.second-section {
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  @include for-phone-only {
    display: block;
  }
}

.second-section-one {
  position: absolute;
  top: -50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  box-shadow: 4px 4px 20px rgba(0,0,0,0.4);
  border-radius: 5px;
  background: #FFFFFF;
  padding: 16px 32px;
  h4 {
    @include for-small-devices-down {
      font-size: 14px;
    }
  }

  @include for-small-devices-down {
    width: 90vw;
    left: 0;
    right: 0;
    margin: 0 auto;
  }
}

.home-uk {
  height: 26px;
  width: 26px;
  border-radius: 50%;
  margin-right: 12px;
}

.second-section-two {
  display: flex;
  justify-content: space-around;
  padding: 100px 0;
  @include for-phone-only {
    h2 {
      font-size: 20px;
    }
  }
}

.second-section-two-text {
  display: flex;
  justify-content: space-around;
  @include for-small-devices-down {
    display: block;
  }
}

.second-section-two-columns {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 30px;

  @include for-small-devices-down {
    grid-template-columns: repeat(2, 1fr);
    grid-column-gap: 0px;
    margin: 0 10px;
  }
}

.second-section-three {
  margin: 100px 0;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 50px;
  position: relative;
  z-index: 10;
  // background: linear-gradient(#FAFBFC, white);
  // background-color: white;
  height: 100%;

  &_svg {
    width: 300px;
    object-fit: cover;
    position: absolute !important;
    left: -120px;
    bottom: -95px;
    z-index: -1;
  }

  &_image {
    width: 500px;
    height: auto;
    border-radius: 5px;
    box-shadow: 0 45px 63px rgba(0,0,0,0.1);
    z-index: 10;
    @include for-medium-devices-up {
      width: 430px;
    }
    @include for-large-devices-up {
      width: 500px;
    }
  }

  &_image:last-child {
    margin-top: 100px;
  }

  @include for-medium-devices-down {
    grid-template-columns: repeat(1, 1fr);
    grid-column-gap: 0px;

    &_image:last-child {
      margin-top: 100px;
      position: relative;
      z-index: 10;
    }

    &_svg {
      visibility: hidden;
    }
  }

  @include for-small-devices-down {

    &_image {
      width: 80vw;
    }

    &_svg {
      visibility: hidden;
    }
  }
}

// END OF SECOND SECTION

.third-section {
  padding: 50px 80px 0px;
  background: #2A2A2A;
  @include for-small-devices-down {
    padding: 50px 16px 0px;
  }
}

.coding-marking-text {
  position: absolute;
  text-align: center;
  top: 6%;
  left: 0;
  right: 0;
  padding: 0 20%;
  margin: 0;
}

.third-section-one {
  background: #1B1B1B;
  position: relative;
  top: -120px;
  padding: 32px 48px;
  border-radius: 8px;
  box-shadow: 0 14px 40px #000000;
  img {
    width: 100%;
    border-radius: 6px;
  }
  @include for-small-devices-down {
    width: 90vw;
    padding: 32px 24px;
  }
}

.third-section-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.third-section-features {
  padding-top: 150px;
  position: relative;
  // z-index: 10;
  display: flex;
  flex-direction: column;
  align-items: center;
  // justify-content: center;
  width: 100%;

  &_icon {
    width: 100px;
    height: auto;
  }

  & h2 {
    color: #0D1B26;
    padding-top: 20px;
    font-weight: 500;
    text-align: center;
    position: relative;
    z-index: 100;
  }

  @include for-small-devices-down {
    padding-top: 100px;
  }
}

.third-section-video {
  width: 100%;
  height: 700px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  position: relative;
  margin-top: 100px;
  margin-bottom: 250px;
  // overflow: hidden;



  @include for-medium-devices-down {
    justify-content: center;
    padding: 0;
    margin-top: 0;

  }

  @include for-small-devices-down {
    justify-content: center;
    height: 60vh;
    & img:nth-child(3) {
      width: 100px;
    }
  }
}

.tvid_img_1 {
  position: absolute;
  top: -550px;
  left: -250px;
  z-index: 1;
  opacity: 0.8;
  @include for-medium-devices-down {
    display: none;
  }
}

.tvid_img_2 {
  height: auto;
  width: 500px;
  position: absolute;
  bottom: -250px;
  right: 0px;
  z-index: 1;
  @include for-medium-devices-down {
    display: none;
  }
}

.tvid_img_3 {
  height: auto;
  width: 100px;
  position: absolute;
  bottom: -250px;
  left: 20px;
  z-index: 1;
  @include for-medium-devices-down {
    display: none;
  }
  @include for-small-devices-down {
    width: 100px;
  }
}

.shadowed {
  box-shadow: 0 45px 63px rgba(0,0,0,0.1);
}

.third-section-media {
  height: 100%;
  padding: 2% 5%;
  width: 80vw;
  background-color: white;
  border-radius: 0 8px 8px 0;
  box-shadow: 0 45px 63px rgba(0,0,0,0.1);
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  &:hover {
    .ripple {
      opacity: 1;
      transition: opacity 0.5s;
    }
  }
  @include for-medium-devices-down {
    height: 50vh;
    width: 85vw;
  }
  @media (max-width: 1800px) {
    padding: 2% 2%;
  }
}

.oneremmb {
  margin-bottom: 1rem;
}

.fxone_orange {
  height: 3rem;
}

.fxone_orange_image {
  position: absolute;
  top: auto;
  bottom: auto;
  left: 0px;
  z-index: -1;
  width: 100%;
  @media (max-width: 1415px) {
    left: auto;
    right: auto;
  }
}
/* ... */

